add writing to Google Calendar feature.
TODO:
 - Check the validation of user's account.
 - code clean up.

--- a/Readme
+++ b/Readme
@@ -3,10 +3,13 @@
 ##
 #
 # gem install sinatra
+# gem sources -a http://gems.github.com  # for installing 'moomerman-twitter_oauth'
 # gem install moomerman-twitter_oauth
 # gem install mechanize --version "= 0.8.5"
 # gem install do_sqlite3 dm-core dm-timestamps
 # gem install rspec
 # gem install rack-test
 # gem install win32console # もしWindows上で動かす時
+# gem install gcalapi
+
 
